# soundflow

./: .env.example  .gitignore  Makefile  PREMIUM_UPGRADE_SUMMARY.md  PRODUCTION_WORKFLOW_GUIDE.md  README.md  VERCEL_DEPLOYMENT.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  daily_free_generate.yml  free-daily.yml  (+3 more)
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/admin/: publish.py
backend/app/core/: auth.py  config.py
backend/app/models/: session.py  track.py
backend/app/services/: catalog.py  router.py  signer.py  storage_r2.py
backend/scripts/: seed_r2.py
backend/tests/: test_backend.py
catalog/: free-index.sample.json  premium-index.sample.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
generator/: .env.example  PREMIUM_README.md  README.md  package-lock.json  pyproject.toml  requirements-gpu.txt  server.py  setup_gpu.sh  ui.py
generator/common/: audio_utils.py  buffer_publisher.py  build_general_catalog.py  catalog_write.py  r2_upload.py  validate_catalog.py
generator/free/: midi_variation.py  music_engine.py  pattern_engine.py  remix_daily.py
generator/notebooks/: SoundFlow_Premium_Colab.ipynb
generator/premium/: musicgen_daily.py  postprocess.py  stableaudio_daily.py
generator/prompts/: free_daily_plan.yaml  free_presets.yaml  premium_prompts.yaml
generator/runners/: colab_run.md  kaggle_run.md
generator/tests/: test_api.py  test_generator.py  test_music.py  test_quality.py
generator/ui/: package-lock.json  package.json
generator/ui/app/: globals.css  layout.tsx  page.tsx
generator/ui/components/: premium-studio.tsx  studio.tsx
(+18 files in other folders)
