[project]
name = "soundflow-backend"
version = "0.1.0"
description = "SoundFlow AI backend (catalog, routing, premium gating, signed URLs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
